objects/ManuClub_Client_Summary__c/ManuClub_Client_Summary__c.object-meta.xml
<CustomObject>
    <label>ManuClub_Client_Summary</label>
    <nameField>
        <displayFormat>MCCS-{0000000000}</displayFormat>
        <label>ManuClub_Client_Summary ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ManuClub_Client_Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>