objects/ManuClub_Client_Summary__c/fields/Average_Steps_Last_Week__c.field-meta.xml
<CustomField>
    <fullName>Average_Steps_Last_Week__c</fullName>
    <label>Average Steps (Last Week)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>