objects/ManuClub_Client_Summary__c/fields/Average_Steps_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Average_Steps_This_Month__c</fullName>
    <label>Average Steps (This Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>